[project]
name = "release-service-utils"
version = "0.1.0"
description = "Konflux Release Service Utils"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "check-jsonschema",
    "jinja2-ansible-filters",
    "packaging",
    "packageurl-python",
    "pubtools-content-gateway==0.5.4",
    "pubtools-pulp==1.33.2",
    "pubtools-exodus==1.5.2",
    "pubtools-marketplacesvm==1.9.0",
    "pubtools-sign==1.0.2",
    "pubtools-pyxis==1.3.7",
    "pulp-cli==0.36.3",
    "diffused-lib==0.3.0",
]

[tool.black]
line-length = 95

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
]
