[project]
name = "release-service-utils"
version = "0.1.0"
description = "Konflux Release Service Utils"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "GitPython>=3.1.40",
    "PyYAML>=6.0.1",
    "requests",
    "requests-kerberos",
    "jinja2",
    "check-jsonschema",
    "jsonschema>=4.23",
    "jinja2-ansible-filters",
    "packaging",
    "packageurl-python",
    "pubtools-content-gateway==0.5.4",
    "pubtools-pulp==1.33.2",
    "pubtools-exodus==1.5.2",
    "pubtools-marketplacesvm==2.1.2",
    "pubtools-sign==1.0.6",
    "pubtools-pyxis==1.3.8",
    "pulp-cli==0.36.3",
    "diffused-lib==0.3.0",
    "confluent-kafka",
]

[tool.black]
line-length = 95

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "integration-tests/lib",
  "scripts/python/helpers",
  "scripts/python/tasks/internal",
  "scripts/python/tasks/managed",
  "utils",
  "pubtools-pulp-wrapper",
  "publish-to-cgw-wrapper",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0",
]

[tool.basedpyright]
extraPaths = [
  "integration-tests/lib",
  "scripts/python/helpers",
  "scripts/python/tasks/internal",
  "scripts/python/tasks/managed",
  "utils",
  "pubtools-pulp-wrapper",
  "publish-to-cgw-wrapper",
]

[tool.coverage.run]
omit = [
    "**/test_*",
    "**/tests/*",
    ".github/*",
    "ci/*",
    "templates/*",
    "data/*",
]

[tool.coverage.report]
show_missing = true
